# mcq

./: Cargo.toml  README.md
.github/workflows/: build.yml
.rpm/: mcquery.spec
src/: main.rs
