[package]
name = "mcq"
version = "1.0.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
async-minecraft-ping = "0.2.1"
colored = "2.0.0"
tokio = { version = "0.2", features = ["macros"] }
