[package]
name = "mcquery"
version = "1.0.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ewpratten/mcq"
description = "A tool for quickly checking the status of Minecraft servers"

[[bin]]
path = "src/main.rs"
name = "mcq"

[dependencies]
clap = "2.33.3"
async-minecraft-ping = "0.2.1"
colored = "2.0.0"
tokio = { version = "0.2", features = ["macros"] }
mc-legacy-formatting = "0.3.1"