[package]
name = "mcquery"
version = "1.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ewpratten/mcq"
description = "A tool for quickly checking the status of Minecraft servers"

[[bin]]
path = "src/main.rs"
name = "mcq"

[dependencies]
clap = "3.1"
async-minecraft-ping = "0.8"
colored = "2.0.0"
tokio = { version = "1.17", features = ["macros", "rt"] }
mc-legacy-formatting = "0.3.1"
